2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.7.30

	* input/bach-schenker.ly (staffPiano): new file.

	* buildscripts/pfx2ttf.fontforge: remove No. glyph from TTF file.

	* Documentation/topdocs/NEWS.tely (Top): simplify NEWS entry, add
	credits to Nicolas.

	* scm/define-markup-commands.scm (epsfile): add scaling to \epsfile.

	* ps/lilyponddefs.ps: remove start-system, stop-system,
	start-page fluff. This saves putting { } code on the stack, fixing
	stack overflows when including EPS files.

2006-01-29  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/putting.itely: minor fixes (comments on -devel).

2006-01-29  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/topdocs/NEWS.tely (Top): add \parallelMusic news.

2006-01-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/putting.itely: minor fixes (mostly tab->space).

2006-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/claop.py: Update.

2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/completion-heads.ly (texidoc): fix.

	* lily/staff-symbol-referencer.cc (on_staff_line): idem.

	* lily/tie-formatting-problem.cc
	(set_ties_config_standard_directions): use abs iso fabs for ints.

	* Documentation/topdocs/INSTALL.texi (Top): document ncsb requirement.

	* mf/feta-bolletjes.mf (overdone_heads): solfa_noteheight, a
	little less than noteheight, to prevent overlaps in chords.

	* lily/note-collision.cc (check_meshing_chords): wipe upper FA
	head, and fudge stem-attachment.

	* scm/lily-library.scm (not): define hash-for-each for guile 1.6

	* lily/slur-scoring.cc (get_best_curve): handle opt_idx < 0 case.

2006-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main): Debugging aid: catch exceptions.

	* flower/std-string.cc (to_string): Robustification.  Fixes midi
	output with std::string.

2006-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
